call-center/src/objects/Coverage__c.object
<CustomObject>
    <description>Insurance plan coverage details</description>
    <fields>
        <fullName>Date_Effective__c</fullName>
        <description>Effective date</description>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Termination__c</fullName>
        <description>Termination Date</description>
        <label>Date Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>Encounter__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Last_Update__c</fullName>
        <description>Last update on the record</description>
        <label>External Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financial_Class__c</fullName>
        <label>Financial Class</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Effective__c</fullName>
        <formula>IF(ISBLANK(Date_Effective__c), FALSE, IF(Date_Effective__c &gt; TODAY(), FALSE, IF(AND(NOT(ISBLANK(Date_Termination__c)), Date_Termination__c &lt;= TODAY()), FALSE, TRUE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Relationship__c</fullName>
        <label>Member Relationship</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payor</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <description>Date of Birth of the patient</description>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Id__c</fullName>
        <label>Subscriber ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_SSN__c</fullName>
        <description>SSN of the Subscriber</description>
        <label>Subscriber SSN</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Subscriber_Sex__c</fullName>
        <label>Subscriber Sex</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test_coverage_view</fullName>
        <columns>NAME</columns>
        <columns>Subscriber_SSN__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>test_coverage_view</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>